spacing fixes

--- a/resources/assets/sass/general.scss
+++ b/resources/assets/sass/general.scss
@@ -125,7 +125,7 @@ nav.navbar {
     font-size: 28px;
   }
 
-  div {
+  > div {
     margin-bottom: 15px;
   }
 }
